<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

	<string name="app_name">Media2Share</string>
	<string name="upnp_service">Upnp Service</string>
	<string name="refresh">Refresh</string>
	<string name="str_play">Play</string>
	<string name="str_pause">Pause</string>
	<string name="str_stop">Stop</string>
	<string name="browselocal">Browse Local</string>
	<string name="music">Music</string>
	<string name="video">Video</string>
	<string name="photo">Photo</string>
	<string name="youtube">YouTube</string>
	<string name="youtube_proxy_port">7576</string>
	<string name="play_to_httpserver_port">7677</string>
	<string name="submit">Submit</string>
	<string name="enter_video_link_">Enter video link:</string>
	<string name="youtube_predefine_link">http://www.youtube.com/watch?v=e47TNTAz2tY</string>
	<string name="proxy_enable_text">Proxy mode</string>
	<string name="youtubeContent">Youtube Content</string>
	<string name="youtube_host">youtube.com</string>
	<string name="media_server">Media Server</string>
	<string name="media_renderer">Media Renderer</string>
	<string name="change_dmr">Change</string>
	<string name="type_to_filter">type to filter</string>
	<string name="dms_list">DMS List</string>
	<string name="dmr_list">DMR List</string>
	<string name="select_all">Select All</string>
	<string name="deselect_all">Deselect All</string>
	<string name="enter_keyword_here">Enter keyword here</string>
	<string name="cancel">Cancel</string>
	<string name="contentName">Content name</string>
	<string name="menu_refresh_devices">Refresh Devices List</string>
	<string name="menu_rescan_sdcard">Rescan Sdcard</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="back">Back</string>
	<string name="library">Library</string>
	<string name="now_playing">Now Playing</string>
	<string name="play">play</string>
	<string name="pause">pause</string>
	<string name="deselectall">deselectAll</string>

	<string-array name="libray_pager_list">
		<item>Home Network</item>
		<item>Playlist</item>
		<item>Internet</item>
	</string-array>
	<string-array name="menu_items">
		<item>Refresh</item>
		<item>Settings</item>
		<item>About</item>
	</string-array>

	<string name="minimize">Minimize</string>
	<string name="close">Close</string>
	<string name="device_name">Device Name:</string>
	<string name="device_type">Device Type:</string>
	<string name="device_udn">Device UDN:</string>
	<string name="select">Select</string>
	<string name="writeToTag">Write TAG</string>
	<string name="anim_duration">300</string>
	<string name="slash">/</string>
	<string name="play_to">Play to remote renderer</string>
	<string name="view_mode">View Mode</string>

</resources>